--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+.changeClass{
+    background-color: blueviolet;
+}
+
 /* For Smaller Mobiles */
 @media screen and (min-width: 360px) and (max-width: 539px){
     .home_button, .button {
